--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,52 +1,2 @@
-$gap-days: 1px;
-$color-border-day: #000;
-$background-color-day: #eee;
-$background-color-day-hover: #ffbfcb;
-$width-days: 100px;
-$height-days: 100px;
-$font-size-days: 30px;
-$padding: 10px;
-$width-calendar: calc(($width-days * 7) + ($gap-days * 6) + ($padding * 2));
-
-body {
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendar {
-  width: $width-calendar;
-  display: flex;
-  flex-wrap: wrap;
-  gap: $gap-days;
-  padding: $padding;
-
-  &__day {
-    box-sizing: border-box;
-    border: solid 1px $color-border-day;
-    background-color: $background-color-day;
-    height: $height-days;
-    width: $width-days;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.5s;
-
-    &:hover {
-      cursor: pointer;
-      background-color: $background-color-day-hover;
-      transition: transform 0.5s;
-      transform: translateY(-20px);
-    }
-
-    @for $days from 1 through 31 {
-      &:nth-child(#{$days})::before {
-        content: '#{$days}';
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: $font-size-days;
-      }
-    }
-  }
-}
+@use '../styles/blocks/reset.scss';
+@use '../styles/blocks/calendar.scss';
