--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,10 +1,17 @@
 $gap-days: 1px;
 $color-border-day: #000;
 $background-color-day: #eee;
-$background-color-day-hover: #ffbfcb;
 $width-days: 100px;
 $height-days: 100px;
 $font-size-days: 30px;
 $padding: 10px;
-$width-calendar: calc(($width-days * 7) + ($gap-days * 6) + ($padding * 2));
-$week-days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
+$width-calendar: calc(($width-days * 7) + ($gap-days * 6));
+$week-days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
