--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,14 @@ $gap: 1px;
 
 body {
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .calendar {
   box-sizing: border-box;
-  margin: auto;
   width: 726px;
   padding: 10px;
   display: flex;
