--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,15 @@
 $cell-width: 100px;
 $gap: 1px;
+$padding: 10px;
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
 
 body {
   margin: 0;
@@ -10,8 +20,7 @@ body {
 }
 
 .calendar {
-  box-sizing: border-box;
-  width: 726px;
+  width: ($cell-width * 7) + ($gap * 6) + ($padding * 2);
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
@@ -19,23 +28,19 @@ body {
 
 
 &__cell {
-  box-sizing: border-box;
   height: 100px;
   width: $cell-width;
   background-color: #eee;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
   border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 0.5s;
 
   &:hover {
     background-color: #FFBFCB;
     cursor: pointer;
     transform: translateY(-20px);
-    transition: transform 0.5s;
-
   }
 }
 }
@@ -43,12 +48,11 @@ body {
 @for $i from 1 through 31 {
   .calendar__cell:nth-child(#{$i})::before {
     content: "#{$i}";
-
   }
 }
 
 @for $end_date from 28 through 31 {
-  .calendar--month-length-#{$end_date} {
+  .calendar--month-length--#{$end_date} {
     .calendar__cell:nth-child(n+#{$end_date}):not(:nth-child(#{$end_date})) {
     display: none;
   }
@@ -64,7 +68,7 @@ sat 5,
 sun 6;
 
 @each $day, $ordinal_number in $days  {
-  .calendar--start-day-#{$day} {
+  .calendar--start-day--#{$day} {
     .calendar__cell:first-child{
     margin-left: ($ordinal_number * $cell-width) + ($ordinal_number * $gap);
   }
