Corected hover color

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,26 +1,28 @@
 @use '../../styles/utils/variables.scss' as *;
 
 .calendar {
-  width: $width-calendar;
   display: flex;
   flex-wrap: wrap;
+
+  width: $width-calendar;
   gap: $gap-days;
   padding: $padding;
 
   &__day {
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     border: solid 1px $color-border-day;
     background-color: $background-color-day;
     height: $height-days;
     width: $width-days;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.5s;
+    transition: 0.5s;
 
     &:hover {
       cursor: pointer;
-      transition: transform 0.5s;
+      background-color: pink;
       transform: translateY(-20px);
     }
 
