--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,64 @@
-body {
+* {
+  box-sizing: border-box;
+}
+
+.body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+$calendar-gap: 1px;
+$calendar-padding: 10px;
+$day-size: 100px;
+$days: (0 mon, 1 tue, 2 wed, 3 thu, 4 fri, 5 sat, 6 sun);
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: $calendar-padding;
+  margin: 0;
+  gap: $calendar-gap;
+  width: 7 * $day-size + 2 * $calendar-padding + 6 * $calendar-gap;
+
+  @each $day-number, $day in $days {
+    &--start-day-#{$day} :first-child {
+      margin-left: $day-number * $day-size + $calendar-gap * $day-number;
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} :nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    background-color: #eee;
+    cursor: pointer;
+    list-style: none;
+    height: $day-size;
+    width: $day-size;
+    line-height: $day-size;
+    text-align: center;
+    border: 1px solid black;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translate(0, -20px);
+    }
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
+      }
+    }
+  }
 }
