--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import '../utils/variables';
+
 * {
   box-sizing: border-box;
 }
@@ -11,11 +13,6 @@
   justify-content: center;
   align-items: center;
 }
-
-$calendar-gap: 1px;
-$calendar-padding: 10px;
-$day-size: 100px;
-$days: (0 mon, 1 tue, 2 wed, 3 thu, 4 fri, 5 sat, 6 sun);
 
 .calendar {
   display: flex;
@@ -38,14 +35,19 @@ $days: (0 mon, 1 tue, 2 wed, 3 thu, 4 fri, 5 sat, 6 sun);
   }
 
   &__day {
-    background-color: #eee;
     cursor: pointer;
     list-style: none;
+    border: 1px solid black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     height: $day-size;
     width: $day-size;
-    line-height: $day-size;
-    text-align: center;
-    border: 1px solid black;
+
+    background-color: #eee;
+
     transition:
       transform 0.5s,
       background-color 0.5s;
