--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,11 +34,11 @@ body {
       content: '#{$day-number}';
     }
   }
+}
 
-  &:hover {
-    background-color: #ffbfcb;
-    transform: translateY(-20px);
-  }
+.calendar__day:hover {
+  background-color: #ffbfcb;
+  transform: translateY(-20px);
 }
 
 @for $day-number from 28 through 31 {
