--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,6 @@
 $cell-size: 100px;
 $gap-size: 1px;
-$padding: 10px;
-$calc-width: calc(($cell-size * 7) + ($gap-size * 6) + ($padding * 2));
+$columns: 7;
 $days: (
   mon: 0,
   tue: 1,
