--- a/src/styles/utils/variabless.scss
+++ b/src/styles/utils/variabless.scss
@@ -1,10 +1,12 @@
+$fontFamily: Arial, Helvetica, sans-serif;
 $cell-size: 100px;
-$quantity-columns: 7;
-$indentation: 1px;
+$columns: 7;
+$gap: 1px;
 $digit-size: 0.3 * $cell-size;
+$padding: 10px;
 $bg-day: #eee;
 $quantityDaysInMonth: 31;
-$padding: 10px;
+$bc-hover: #ffbfcb;
 $daysOfWeek: (
   'mon': 0,
   'tue': 1,
@@ -12,7 +14,6 @@ $daysOfWeek: (
   'thu': 3,
   'fri': 4,
   'sat': 5,
-  'sun': 6
+  'sun': 6,
 );
-$calendarWidth: ($cell-size + $indentation + $padding) * $quantity-columns;
-
+$calendarWidth: (($cell-size + $gap + $padding) * $columns) - $gap;
