--- a/src/styles/utils/variabless.scss
+++ b/src/styles/utils/variabless.scss
@@ -16,4 +16,4 @@ $daysOfWeek: (
   'sat': 5,
   'sun': 6,
 );
-$calendarWidth: (($cell-size + $gap + $padding) * $columns) - $gap;
+$calendarWidth: (($cell-size + $gap) * $columns) - $gap + 2 * $padding;
