--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,13 +46,13 @@ body {
   }
 
   @each $day, $i in $daysOfWeek {
-    &--start-day--#{$day} :first-child {
+    &--start-day-#{$day} :first-child {
       margin-left: ($cell-size + $gap) * $i;
     }
   }
 
   @for $amountsOfDay from 28 through 31 {
-    &--month-length--#{$amountsOfDay} :nth-child(n + #{$amountsOfDay + 1}) {
+    &--month-length-#{$amountsOfDay} :nth-child(n + #{$amountsOfDay + 1}) {
       display: none;
     }
   }
