--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,52 +1,50 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
+
   margin: auto;
   width: $calendar-width;
-  gap: $gap;
+  gap: 1px;
   padding: 10px;
+
+  @each $startDay, $num in $dayWeek {
+    &--start-day--#{$startDay} :first-child {
+      margin-left: $num * ($square-day + 1);
+    }
+  }
+
+  @for $lastDayMonth from 28 through 31 {
+    &--month-length--#{$lastDayMonth} :nth-child(n + #{($lastDayMonth + 1)}) {
+      display: none;
+    }
+  }
 
   &__day {
     position: relative;
+    transition: transform 0.5s ease-in;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
-    &:first-child {
-      margin-left: $margin-first-child;
-    }
+    background-color: #eee;
 
-    @for $long from 1 through $month-length {
+    @include square(100px);
+
+    @for $long from 1 through 31 {
       &:nth-child(#{$long}) {
-        @include square($square-day);
-
         &::before {
           content: "#{$long}";
           font-size: 30px;
           font-family: Arial, Helvetica, sans-serif;
         }
-
-        &:hover {
-          background-color: $color-pink;
-          cursor: pointer;
-        }
       }
     }
 
-    $dayWeek: 
-      "mon",
-      "tue",
-      "wed",
-      "thu",
-      "fri",
-      "sat",
-      "sun";
-
-    @each $days in $dayWeek {
-      &--#{$days} {
-        content: "";
-      }
+    &:hover {
+      background-color: $color-hover;
+      transform: translateY(-20px);
+      cursor: pointer;
     }
   }
 }
