--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,4 @@
-$column-width: 100px;
-$height: 100px;
-$gap: 1px;
-$padding: 10px;
-$week-days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
+@import './variables.scss';
 
 * {
   box-sizing: border-box;
@@ -22,42 +18,43 @@ body {
   margin: auto;
   gap: 1px;
   width: calc(7 * #{$column-width} + 2 * #{$padding});
-}
 
-.calendar__day{
-  width: calc((100% - 6 * 1px - 2 * #{$padding}) / 7);
-  height: $column-width;
-  background-color: #eee;
-  border: 1px solid black;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 0.5s, transform 0.5s;
-}
+  &__day{
+    width: calc((100% - 6 * 1px - 2 * #{$padding}) / 7);
+    height: $column-width;
+    background-color: #eee;
+    border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.5s, transform 0.5s;
 
-.calendar__day:hover{
-  cursor: pointer;
-  background-color: #FFBFCB;
-  transform: translateY(-20px);
-}
-
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i})::before {
-    content: '#{$i}';
-  }
-}
-
-@each $index, $day in $week-days {
-  .calendar--start-day-#{$day} .calendar__day:first-child {
-      margin-left: ($index * ($height + 0.2));
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
     }
-}
 
-@for $i from 28 through 31 {
-  .calendar--month-length-#{$i} .calendar__day:nth-child(n+#{$i + 1}) {
-    display: none;
+    @each $index, $day in $week-days {
+      .calendar--start-day-#{$day} &:first-child {
+          margin-left: ($index * ($height + 0.2));
+        }
+    }
+
+    @for $i from 28 through 31 {
+      .calendar--month-length-#{$i} &:nth-child(n+#{$i + 1}) {
+        display: none;
+      }
+    }
+
+
+    &:hover{
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
   }
 }
 
