--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,4 +3,4 @@ $height: 100px;
 $gap: 1px;
 $padding: 10px;
 $week-days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
-
+$transition-duration: 0.5s;
