--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -16,10 +16,10 @@ body {
   flex-wrap: wrap;
   margin: auto;
   gap: 1px;
-  width: calc(7 * #{$column-width} + 2 * #{$padding});
+  width: calc(7 * #{$column-width} + 6 * #{$gap});
 
   &__day{
-    width: calc((100% - 6 * 1px - 2 * #{$padding}) / 7);
+    width: 100px;
     height: $column-width;
     background-color: #eee;
     border: 1px solid black;
