--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@
 
 @each $index, $day in $week-days {
   .calendar--start-day-#{$day} .calendar__day:first-child {
-      margin-left: ($index * ($height + 0.2));
+      margin-left: ($index * ($column-width + $gap));
     }
 }
 
