recreated code using scss

--- a/src/styles/_start-day-margin-calc.scss
+++ b/src/styles/_start-day-margin-calc.scss
@@ -1,7 +1,8 @@
-$start-days: ( mon, tue, wed, thu, fri, sat, sun );
+$start-days: (mon, tue, wed, thu, fri, sat, sun);
 
 @function start-day-margin($start-day-name) {
-  @return ($cell-size * (index($start-days, $start-day-name) - 1)) + ($gap * index($start-days, $start-day-name) - 1);
+  @return ($cell-size * (index($start-days, $start-day-name) - 1)) +
+    ($gap * index($start-days, $start-day-name) - 1);
 }
 
 .calendar {
