--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 @import 'variables';
-@import 'start-day-count';
-@import 'days-in-month-count';
+@import 'start-day-margin-calc';
+@import 'days-in-month-calc';
 
 html {
   font-family: Arial, sans-serif;
