add task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -15,8 +15,8 @@
     background: $square-color;
     border: 1px solid black;
 
-    width: $cell-width;
-    height: 100px;
+    width: $cell-size;
+    height: $cell-size;
 
     display: flex;
     align-items: center;
