--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,6 @@
 $square-color: #eee;
 $number-of-cells: 7;
 $cell-number-shift: 6;
-$cell-width: 100px;
-$cell-height: 100px;
 $cell-size: 100px;
-$calendar-width: ($number-of-cells * $cell-width) + 20 - 14;
+$calendar-width: ($number-of-cells * $cell-size) + 20 - 14;
 $start-days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
