--- a/src/styles/blocks/var.scss
+++ b/src/styles/blocks/var.scss
@@ -4,7 +4,8 @@ $hover-color: #ffbfcb;
 $columns: 7;
 $gap: 1;
 $cell-up: -20px;
-$days: mon 0,
+$days:
+  mon 0,
   tue 101px,
   wed 202px,
   thu 303px,
