--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,7 +29,7 @@
 
     &:hover {
       cursor: pointer;
-      transform: translate(0, -20px);
+      transform: translate(0, $cell-up);
       background-color: #ffbfcb;
     }
 
