--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,64 @@
+@import './utils/variables';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  position: absolute;
+  width: ($cell-size + $gap) * $cell-count;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px solid black;
+    padding: 10px;
+
+    @for $count from 1 through 31 {
+      &:nth-child(#{$count}n)::before {
+        content: '#{$count}';
+        width: $digit-size;
+        height: $digit-size;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+      transition-duration: 0.5s;
+    }
+  }
+}
+
+@each $day, $index in $week {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: ($cell-size + $gap) * $index;
+    }
+  }
+}
+
+@for $day from 1 through 31 {
+  .calendar--month-length-#{$day - 1} {
+    .calendar__day:nth-child(n + #{$day}) {
+      display: none;
+    }
+  }
 }
