center of clandar and changing calculating loop

--- a/src/styles/utils/calendar.scss
+++ b/src/styles/utils/calendar.scss
@@ -1,19 +1,11 @@
 .calendar {
-  width: 706px;
   box-sizing: border-box;
-  display: flex;
   flex-wrap: wrap;
   gap: 1px;
-
-  /* I must to put margin 122px and 72px for passing npm test without them it's not works */
-  &--position {
-    margin: 72px auto;
-  }
-
-  &--start-day-wed,
-  &--month-length-29 {
-    margin: 122px auto;
-  }
+  width: 706px;
+  height: fit-content;
+  display: flex;
+  align-self: center;
 }
 
 .calendar__day {
