--- a/src/styles/utils/page.scss
+++ b/src/styles/utils/page.scss
@@ -1,5 +1,7 @@
 body {
   margin: 0;
-  padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
