--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,22 +51,23 @@ body {
       transform: translateY(-20px);
     }
   }
-}
+  
+  @for $num from 1 through 31 {
+    &__day:nth-child(#{$num})::before {
+      content: '#{$num}';
+    }
+  }
 
-@for $num from 1 through 31 {
-  .calendar__day:nth-child(#{$num})::before {
-    content: '#{$num}';
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  @each $day, $numb in $days {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: $numb * ($day-size + $calendar-gap);
+    }
   }
 }
 
-@for $i from 28 through 31 {
-  .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
-    display: none;
-  }
-}
-
-@each $day, $numb in $days {
-  .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: $numb * ($day-size + $calendar-gap);
-  }
-}
