--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,14 +1,16 @@
 $square-size: 100px;
 $square-color: #eee;
-$square-font-size: 30px;
+$fontFamily: arial, sans-serif;
+$width: (($square-size + 1px) * 7) - 1px;
+$font-size: 30px;
 $gap-size: 1px;
 $padding: 10px;
 $week-days: (
-  'mon': 1,
-  'tue': 2,
-  'wed': 3,
-  'thu': 4,
-  'fri': 5,
-  'sat': 6,
-  'sun': 7
-)
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
