Finishing the tasks. But I dont understand why my hover-pointer is not working.

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -5,7 +5,7 @@ body {
   justify-content: center;
   height: 100vh;
   font-family: $fontFamily;
-  font-size: font-size;
+  font-size: $font-size;
 }
 
 .calendar {
