--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $square-size: 100px;
 $square-color: #eee;
-$fontFamily: arial, sans-serif;
+$fontFamily: Arial, sans-serif;
 $width: (($square-size + 1px) * 7) - 1px;
 $font-size: 30px;
 $gap-size: 1px;
