Fixing hover property

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -43,11 +43,12 @@ body {
       }
     }
 
-    &__day:hover {
-      cursor: pointer;
-      background-color: #ffbfcb;
-      transform: translate(0, -20px);
-      transition: 0.5s;
-    }
   }
+}
+
+.calendar__day:hover {
+  cursor: pointer;
+  background-color: #ffbfcb;
+  transform: translate(0, -20px);
+  transition: 0.5s;
 }
