--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@ $day-gap: 1px;
 $calendar-padding: 10px;
 $day-size: 100px;
 $days-count: 31;
-$days: (mon 0, tue 1, wen 2, thu 3, fri 4, sat 5, sun 6);
+$days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
 
 html {
   font-family: Arial, Helvetica, sans-serif;
