--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,58 @@
+@import 'variables';
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  width: 7 * $cell-size + 6 * $gap;
+  flex-wrap: wrap;
+  gap: $gap;
+  padding: $calendar-padding;
+
+  @each $day-name, $day-index in $weekdays {
+    &--start-day-#{$day-name} :first-child {
+      margin-left: $day-index * $cell-size + $gap * $day-index;
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px solid #000;
+    cursor: pointer;
+    transition-duration: 0.5s;
+
+    @for $day from 1 through $days-count {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
+      }
+    }
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
