add sass nesting

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,34 +13,34 @@
   margin: 10px;
   border-collapse: collapse;
   gap: 1px;
-}
 
-.calendar__day {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: $day-size;
-  height: $day-size;
-  border: $day-border;
-  box-sizing: border-box;
-  background-color: $day-color;
-  font-family: Arial, sans-serif;
-  font-size: $day-font-size;
-  transition: $day-transition;
-}
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $day-size;
+    height: $day-size;
+    border: $day-border;
+    box-sizing: border-box;
+    background-color: $day-color;
+    font-family: Arial, sans-serif;
+    font-size: $day-font-size;
+    transition: $day-transition;
+  }
 
-.calendar__day:hover {
-  cursor: pointer;
-  background-color: $day-hover-color;
-  transform: $day-hover-transform;
-}
+  &__day:hover {
+    cursor: pointer;
+    background-color: $day-hover-color;
+    transform: $day-hover-transform;
+  }
 
-.calendar__day::before {
-  content: attr(data-day);
-}
+  &__day::before {
+    content: attr(data-day);
+  }
 
-.calendar__day:nth-child(7n + 1) {
-  margin-left: 0;
+  &__day:nth-child(7n + 1) {
+    margin-left: 0;
+  }
 }
 
 @for $i from 1 through $month-length {
