add styles for body to center the calendar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,15 @@
 @import './variables';
 
-.body {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -9,8 +17,8 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $calendar-size;
   margin: 10px;
+  width: $calendar-size;
   border-collapse: collapse;
   gap: 1px;
 
