--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -4,15 +4,14 @@
   gap: $gap;
   padding: $paddingCalendarBox;
   width: $calendarSize;
-  box-sizing: border-box;
+  margin: auto;
+  padding-top: 82px;
 
   &__day {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 30px;
     text-decoration: none;
     color: black;
-
-    box-sizing: border-box;
 
     background-color: #eee;
     border: 1px solid black;
@@ -52,6 +51,6 @@
 
   &--start-day-wed,
   &--month-length-29 {
-    padding-top: 60px;
+    padding-top: 132px;
   }
 }
