--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -8,22 +8,18 @@
   padding-top: 82px;
 
   &__day {
-    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: 30px;
-    text-decoration: none;
     color: black;
-
     background-color: #eee;
     border: 1px solid black;
-
     height: $heightCell;
     width: $widthCell;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
-    transition: all 0.5s;
+    transition:
+      background-color $duration,
+      transform $duration;
+    cursor: pointer;
 
     &:hover {
       background-color: #ffbfcb;
