--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -2,19 +2,5 @@ $heightCell: 100px;
 $widthCell: 100px;
 $paddingCalendarBox: 10px;
 $gap: 1px;
+$duration: 0.5s;
 $calendarSize: $paddingCalendarBox * 2 + $gap * 6 + $widthCell * 7;
-$start-day: (
-  'mon': 0,
-  'tue': $widthCell + $gap,
-  'wed': $widthCell * 2 + $gap * 2,
-  'thu': $widthCell * 3 + $gap * 3,
-  'fri': $widthCell * 4 + $gap * 4,
-  'sat': $widthCell * 5 + $gap * 5,
-  'sun': $widthCell * 6 + $gap * 6,
-);
-$month-length: (
-  '28': 29,
-  '29': 30,
-  '30': 31,
-  '31': 32,
-);
