--- a/src/styles/global/general.scss
+++ b/src/styles/global/general.scss
@@ -1,8 +1,10 @@
 * {
   box-sizing: border-box;
-}
-
-body {
   margin: 0;
   padding: 0;
+}
+
+html {
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 30px;
 }
