--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
 @import 'global/variables';
+@import 'global/functions';
+@import 'global/collections';
 @import 'global/general';
 @import 'blocks/calendar';
