--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,69 @@
-body {
+$weekdays: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+$squareDays: 100px;
+$heightDay: 100px;
+$widthDay: 100px;
+$daysInRow: 7;
+$mounthLength: 31;
+$gap: 1px;
+$padding: 30px;
+
+@for $i from 1 through $mounthLength {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
+  }
+}
+
+@for $d from 28 through 31 {
+  .calendar--month-length-#{$d} :nth-child(n + #{$d + 1}) {
+    display: none;
+  }
+}
+
+.page {
   margin: 0;
+  padding: $padding;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+
+  max-width: 8 * $widthDay;
+
+  @each $day-name, $day-index in $weekdays {
+    &--start-day-#{$day-name} :first-child {
+      margin-left: ($squareDays + $gap) * $day-index;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    height: $heightDay;
+    width: $widthDay;
+    border: 1px solid black;
+    background-color: #eee;
+
+    font-size: 30px;
+    cursor: pointer;
+    transition: all 0.5s;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: #ffbfcb;
+    }
+  }
 }
