--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -23,6 +23,7 @@
         content: '#{$i}';
       }
     }
+
     box-sizing: border-box;
 
     display: flex;
@@ -36,7 +37,7 @@
 
     font-size: 30px;
     cursor: pointer;
-    transition: all 0.5s;
+    transition: transform 0.5s,background-color 0.5s;
 
     &:hover {
       transform: translateY(-20px);
