attempt resolve the task

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,5 +1,5 @@
 .calendar {
-  min-width: $calendar-day-width * 7 + 2 * $padding-size;
+  width: $calendar-day-width * 7 + 2 * $padding-size + 6px;
   padding: $padding-size;
   display: flex;
   flex-wrap: wrap;
@@ -28,24 +28,24 @@
       }
     }
 
-    @each $day, $index in $day-of-week {
-      &--start-day--#{$day} {
-        margin-left: ($index - 1) * ($calendar-day-width + 1px);
-      }
-    }
-
-    @for $lastDay from 28 through 31 {
-      &--month-length--#{$lastDay} {
-        &:nth-child(#{$lastDay}) {
-          display: none;
-        }
-      }
-    }
-
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translateY(-20px);
+    }
+  }
+
+  @each $day, $index in $day-of-week {
+    &--start-day--#{$day} {
+      margin-left: ($index - 1) * ($calendar-day-width + 1px);
+    }
+  }
+
+  @for $lastDay from 28 through 31 {
+    &--month-length--#{$lastDay} {
+      &:nth-child(#{$lastDay}) {
+        display: none;
+      }
     }
   }
 }
