--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@ div {
 }
 
 .calendar {
-  min-width: 720px;
+  width: 726px;
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
@@ -156,54 +156,54 @@ div {
   content: '31';
 }
 
-.calendar__day--start-day--sun {
-  margin-left: 606px;
-}
-
-.calendar__day--start-day--mon {
-  margin-left: 0;
-}
-
-.calendar__day--start-day--tue {
-  margin-left: 101px;
-}
-
-.calendar__day--start-day--wed {
-  margin-left: 202px;
-}
-
-.calendar__day--start-day--thu {
-  margin-left: 303px;
-}
-
-.calendar__day--start-day--fri {
-  margin-left: 404px;
-}
-
-.calendar__day--start-day--sat {
-  margin-left: 505px;
-}
-
-.calendar__day--month-length--28:nth-child(28) {
-  display: none;
-}
-
-.calendar__day--month-length--29:nth-child(29) {
-  display: none;
-}
-
-.calendar__day--month-length--30:nth-child(30) {
-  display: none;
-}
-
-.calendar__day--month-length--31:nth-child(31) {
-  display: none;
-}
-
 .calendar__day:hover {
   cursor: pointer;
   background-color: #ffbfcb;
   transform: translateY(-20px);
+}
+
+.calendar--start-day--sun {
+  margin-left: 606px;
+}
+
+.calendar--start-day--mon {
+  margin-left: 0;
+}
+
+.calendar--start-day--tue {
+  margin-left: 101px;
+}
+
+.calendar--start-day--wed {
+  margin-left: 202px;
+}
+
+.calendar--start-day--thu {
+  margin-left: 303px;
+}
+
+.calendar--start-day--fri {
+  margin-left: 404px;
+}
+
+.calendar--start-day--sat {
+  margin-left: 505px;
+}
+
+.calendar--month-length--28:nth-child(28) {
+  display: none;
+}
+
+.calendar--month-length--29:nth-child(29) {
+  display: none;
+}
+
+.calendar--month-length--30:nth-child(30) {
+  display: none;
+}
+
+.calendar--month-length--31:nth-child(31) {
+  display: none;
 }
 
 /*# sourceMappingURL=main.css.map */
