--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -37,7 +37,9 @@
 
     font-size: 30px;
     cursor: pointer;
-    transition: transform 0.5s,background-color 0.5s;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
 
     &:hover {
       transform: translateY(-20px);
@@ -45,3 +47,5 @@
     }
   }
 }
+
+// asd \\
