--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -162,47 +162,47 @@ div {
   transform: translateY(-20px);
 }
 
-.calendar--start-day--sun {
+.calendar--start-day--sun .calendar__day:nth-child(1) {
   margin-left: 606px;
 }
 
-.calendar--start-day--mon {
+.calendar--start-day--mon .calendar__day:nth-child(1) {
   margin-left: 0;
 }
 
-.calendar--start-day--tue {
+.calendar--start-day--tue .calendar__day:nth-child(1) {
   margin-left: 101px;
 }
 
-.calendar--start-day--wed {
+.calendar--start-day--wed .calendar__day:nth-child(1) {
   margin-left: 202px;
 }
 
-.calendar--start-day--thu {
+.calendar--start-day--thu .calendar__day:nth-child(1) {
   margin-left: 303px;
 }
 
-.calendar--start-day--fri {
+.calendar--start-day--fri .calendar__day:nth-child(1) {
   margin-left: 404px;
 }
 
-.calendar--start-day--sat {
+.calendar--start-day--sat .calendar__day:nth-child(1) {
   margin-left: 505px;
 }
 
-.calendar--month-length--28:nth-child(28) {
+.calendar--month-length--28 .calendar__day:nth-child(n + 29) {
   display: none;
 }
 
-.calendar--month-length--29:nth-child(29) {
+.calendar--month-length--29 .calendar__day:nth-child(n + 30) {
   display: none;
 }
 
-.calendar--month-length--30:nth-child(30) {
+.calendar--month-length--30 .calendar__day:nth-child(n + 31) {
   display: none;
 }
 
-.calendar--month-length--31:nth-child(31) {
+.calendar--month-length--31 .calendar__day:nth-child(n + 32) {
   display: none;
 }
 
