--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   gap: $gap;
 
-  max-width: 8 * $widthDay;
+  min-width: 8 * $daySize;
 
   @for $d from 28 through 31 {
     &--month-length-#{$d} :nth-child(n + #{$d + 1}) {
@@ -13,7 +13,7 @@
 
   @each $day-name, $day-index in $weekdays {
     &--start-day-#{$day-name} :first-child {
-      margin-left: ($squareDays + $gap) * $day-index;
+      margin-left: ($daySize + $gap) * $day-index;
     }
   }
 
@@ -31,8 +31,8 @@
     align-items: center;
     justify-content: center;
     gap: $gap;
-    height: $heightDay;
-    width: $widthDay;
+    height: $daySize;
+    width: $daySize;
     border: 1px solid black;
     background-color: #eee;
     font-family: Arial, Helvetica, sans-serif;
