--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -8,9 +8,7 @@ $weekdays: (
   'sun': 6,
 );
 $gap: 1px;
-$squareDays: 100px;
-$heightDay: 100px;
-$widthDay: 100px;
+$daySize: 100px;
 $daysInRow: 7;
 $mounthLength: 31;
 $padding: 30px;
