--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,31 +1,49 @@
 .calendar {
   padding: 10px;
   display: flex;
-  flex-wrap: wrap-reverse;
-  gap: 1px;
-  width: 706px;
+  gap: $gap;
+  flex-wrap: wrap;
+  width: $size--field;
   counter-reset: day;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  justify-content: end;
 
-  .cell {
+  @each $day, $start in $week {
+    &--start-day-#{$day} :first-child {
+      margin-left: ($start * ($size--cell + $gap));
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} {
+      @for $lacks from $length through 31 {
+        .calendar__day:nth-child(#{$lacks + 1}) {
+          display: none;
+        }
+      }
+    }
+  }
+
+  &__day {
     box-sizing: border-box;
     background-color: #eee;
-    width: 100px;
-    height: 100px;
+    width: $size--cell;
+    height: $size--cell;
+    margin-bottom: $gap;
     border: 1px solid black;
     color: black;
     font-size: 30px;
     text-align: center;
-    line-height: 100px;
+    line-height: $size--cell;
+    transition: 300ms;
 
     &:hover {
       background-color: #ffbfcb;
       transform: translateY(-20px);
-      transition: 300ms;
+      cursor: pointer;
+      border: none;
     }
 
     &::before {
