--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,12 @@
-$days: 0;
+$gap: 1px;
+$size--cell: 100px;
+$size--field: 7 * $size--cell + 6 * $gap;
+$week: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
