--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,10 +5,6 @@
   flex-wrap: wrap;
   width: $size--field;
   counter-reset: day;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
   @each $day, $start in $week {
     &--start-day-#{$day} :first-child {
@@ -31,13 +27,13 @@
     background-color: #eee;
     width: $size--cell;
     height: $size--cell;
-    margin-bottom: $gap;
     border: 1px solid black;
     color: black;
     font-size: 30px;
-    text-align: center;
-    line-height: $size--cell;
     transition: 300ms;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &:hover {
       background-color: #ffbfcb;
