--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,70 +1,50 @@
 .calendar {
   padding: 10px;
-  width: 706px;
+  width: 7 * $cell-size + 6 * $cell-gap;
   display: flex;
   flex-flow: row wrap;
-  gap: 1px;
+  gap: $cell-gap;
 
-  @for $i from 1 through 31 {
-    .calendar__day:nth-child(#{$i}) {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-sizing: border-box;
-      background-color: $cell-color;
-      width: $cell-size;
-      height: $cell-size;
-      border: 1px solid black;
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    background-color: $cell-color;
+    width: $cell-size;
+    height: $cell-size;
+    border: 1px solid black;
 
-      @include cell-on-hover;
-      &::before {
+    @include cell-on-hover;
+
+    @for $i from 1 through 31 {
+    &:nth-child(#{$i}):before {
         content: '#{$i}';
       }
     }
-  }
-  &__day:first-child {
-    margin-left: 606px;
+
+    &__day:first-child {
+      margin-left: 606px;
+    }
   }
 }
 
 @each $day, $margin-left in $days {
   .calendar--start-day-#{$day} {
     .calendar__day:first-child {
-      margin-left: $margin-left * 101px;
+      margin-left: $margin-left * ($cell-size + $cell-gap);
     }
   }
 }
 
 @for $i from 28 through 31 {
   .calendar--month-length-#{$i} {
-    @for $j from 28 through $i {
-      .calendar__day:nth-child(#{$j}) {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-sizing: border-box;
-        background-color: $cell-color;
-        width: $cell-size;
-        height: $cell-size;
-        border: 1px solid black;
-
-        @include cell-on-hover;
-        &::before {
-          content: '#{$j}';
-        }
-      }
-    }
-    // Actually don't know how to remove this "redundant" part, my algorithm makes 31 days if there is no modificator
-    // and make 28 days if modificator says 28 days, then it makes 29, 30, 31 days 0 size, if you give me an better
-    // idea - i'll happily implement this :)
-    @for $j from $i + 1 through 32 {
+    @for $j from $i+1 through 32 {
       .calendar__day:nth-child(#{$j}) {
         width: 0;
         height: 0;
-        border: 0 solid black;
-        &::before {
-          content: '';
-        }
+        border: none;
+        font-size: 0;
       }
     }
   }
