--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
   margin: 0;
 
@@ -34,24 +36,15 @@ body {
       justify-content: center;
       align-items: center;
       transition-duration: 0.5s;
+      border: 1px solid black;
+      background-color: #eee;
+      width: $sectionSize;
+      height: $sectionSize;
     }
 
     @for $day from 1 through 31 {
-      &__day:nth-child(#{$day}) {
-        border: 1px solid black;
-        background-color: #eee;
-        width: $sectionSize;
-        height: $sectionSize;
-
-        &::before {
-          content: '#{$day}';
-          display: block;
-          text-align: center;
-          width: $sectionSize;
-          line-height: 100px;
-          font-size: 30px;
-          font-family: Arial, Helvetica, sans-serif;
-        }
+      &__day:nth-child(#{$day}):before {
+        content: '#{$day}';
       }
     }
 
