--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,4 @@
-$cell-size: 100px;
-$border-width: 1px;
-$block-column: 7;
-$gap: 1px;
-$font-size: 30px;
-$days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+@import './variables';
 
 body {
   margin: 0;
@@ -51,17 +46,9 @@ body {
     transition: transform 0.5s ease-in-out;
 
     &:hover {
-      animation: move-and-change 0.5s ease-in-out forwards;
-    }
-
-    @keyframes move-and-change {
-      50% {
-        transform: translateY(-20px);
-      }
-      100% {
-        transform: translateY(-20px);
-        background-color: #ffbfcb;
-      }
+      transform: translateY(-20px);
+      background-color: #ffbfcb;
+      transition: 0.5s;
     }
 
     @for $index from 1 through 31 {
