--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,55 @@
+@import './variables';
+
 body {
   margin: 0;
+  height: 100vh;
+}
+
+.calendar {
+  box-sizing: border-box;
+  width: ($box-size + $days-gap) * $columns;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $days-gap;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  &__day {
+    position: relative;
+    width: $box-size;
+    height: $box-size;
+    background-color: $bg-color;
+    border: 1px solid black;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @for $number from 1 through 31 {
+      &:nth-child(#{$number})::before {
+        content: '#{$number}';
+        position: absolute;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
+    }
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: $pink-color;
+      transition-duration: 0.5s;
+      cursor: pointer;
+    }
+  }
+}
+
+@each $day, $i in $days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: ($box-size + $days-gap) * $i;
+    }
+  }
 }
