update task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,15 @@
 @import './variables';
 
+*{
+    box-sizing: border-box;
+}
+
 body {
   margin: 0;
   height: 100vh;
 }
 
 .calendar {
-  box-sizing: border-box;
   width: ($box-size + $days-gap) * $columns;
   display: flex;
   flex-wrap: wrap;
