--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,9 @@
 body {
   margin: 0;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .calendar {
@@ -14,18 +17,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: $days-gap;
-  margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
   &__day {
     position: relative;
     width: $box-size;
     height: $box-size;
     background-color: $bg-color;
-    border: 1px solid black;
+    border: 1px solid #000;
     padding: 10px;
     display: flex;
     align-items: center;
