--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -28,9 +28,9 @@
     text-align: center;
     transition: transform 0.5s ease-in-out;
 
-    @for $index from 1 through 31 {
-      &:nth-child(#{$index})::before {
-        content: '#{$index}';
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
       }
     }
 
