--- a/src/styles/block/calendar.scss
+++ b/src/styles/block/calendar.scss
@@ -1,13 +1,13 @@
 .calendar {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 
   gap: $gap;
   width: $width;
   flex-wrap: wrap;
 
-  padding: 50px $calendar-padding 0;
+  padding: 82px $calendar-padding 0;
 
   @each $day, $number in $days-of-week {
     &--start-day-#{$day} {
@@ -20,7 +20,7 @@
   @for $index from 28 through 31 {
     &--month-length-#{$index} {
       & :nth-child(1n + #{$index + 1}) {
-        display: contents;
+        display: none;
       }
     }
   }
