--- a/src/styles/block/normalize.scss
+++ b/src/styles/block/normalize.scss
@@ -3,6 +3,11 @@
 }
 
 body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin: 0;
 }
 
