executed layout_calendar

--- a/src/styles/block/calendar.scss
+++ b/src/styles/block/calendar.scss
@@ -1,13 +1,12 @@
 .calendar {
   display: flex;
-  justify-content: center;
   align-items: center;
 
   gap: $gap;
   width: $width;
   flex-wrap: wrap;
 
-  padding: 82px $calendar-padding 0;
+  padding: 0 $calendar-padding 0;
 
   @each $day, $number in $days-of-week {
     &--start-day-#{$day} {
