--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,17 @@
+@import './utils/variables';
+@import 'main';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: $bg-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
