--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,69 @@
+$day-size: 100px;
+$calendar-padding: 10px;
+$day-gap: 1px;
+$calendar-size: $calendar-padding * 2 + $day-size * 7 + $day-gap * 6;
+
 body {
   margin: 0;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  box-sizing: border-box;
+  max-width: $calendar-size;
+  padding: $calendar-padding;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  margin: auto;
+
+  $days: (
+    'mon': 0,
+    'tue': calc(#{$day-size} * 1 + #{$day-gap} * 1),
+    'wed': calc(#{$day-size} * 2 + #{$day-gap} * 2),
+    'thu': calc(#{$day-size} * 3 + #{$day-gap} * 3),
+    'fri': calc(#{$day-size} * 4 + #{$day-gap} * 4),
+    'sat': calc(#{$day-size} * 5 + #{$day-gap} * 5),
+    'sun': calc(#{$day-size} * 6 + #{$day-gap} * 6),
+  );
+
+  @each $day, $margin in $days {
+    &.calendar--start-day-#{$day} :first-child {
+      margin-left: $margin;
+    }
+  }
+
+  @for $item from 1 through 31 {
+    & :nth-child(#{$item})::before {
+      content: ' #{$item}';
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+  }
+
+  @for $lastDay from 28 through 31 {
+    &.calendar--month-length-#{$lastDay} :nth-child(-n + #{$lastDay}) {
+      display: flex;
+    }
+  }
+
+  &__day {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    height: $day-size;
+    flex-basis: $day-size;
+    background-color: #eee;
+    border: 1px solid black;
+    transition: all 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
