--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,4 @@
-$day-size: 100px;
-$calendar-padding: 10px;
-$day-gap: 1px;
-$calendar-size: $calendar-padding * 2 + $day-size * 7 + $day-gap * 6;
+@import './utilits/variables';
 
 body {
   margin: 0;
@@ -18,16 +15,6 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   margin: auto;
-
-  $days: (
-    'mon': 0,
-    'tue': calc(#{$day-size} * 1 + #{$day-gap} * 1),
-    'wed': calc(#{$day-size} * 2 + #{$day-gap} * 2),
-    'thu': calc(#{$day-size} * 3 + #{$day-gap} * 3),
-    'fri': calc(#{$day-size} * 4 + #{$day-gap} * 4),
-    'sat': calc(#{$day-size} * 5 + #{$day-gap} * 5),
-    'sun': calc(#{$day-size} * 6 + #{$day-gap} * 6),
-  );
 
   @each $day, $margin in $days {
     &.calendar--start-day-#{$day} :first-child {
